# cpp_lua_demo

./: .gitignore  README.md  luascript.lua  main.cpp
cmake_cpp_lua/: CMakeLists.txt  build.sh
cmake_cpp_lua/src/: main.cpp  script.lua
cpp-call-lua/: CMakeLists.txt
cpp-call-lua/src/: main.cpp
lua-call-c/: CMakeLists.txt  README.md  add.c  build.sh  lua-hello.lua
